# shared-desktop-ontologies

./: Makefile  README.md  shared-desktop-ontologies.spec
src/: CMakeLists.txt  ChangeLog  SharedDesktopOntologiesConfig.cmake.in  shared-desktop-ontologies.pc.cmake
src/cmake/modules/: FindDocBookXSLNS.cmake
src/docs/: HOWTO.DOCUMENTATION  build-ontology-reference.py  ontology.docbook.template  sdo-docbook.xsl.cmake  sdo.css  sdo.docbook
src/nao/: nao-authors.docbook  nao-main.docbook  nao.trig.in
src/ncal/: ncal-main.docbook  ncal.trig.in
src/nco/: nco-authors.docbook  nco-contact.ttl  nco-key.ttl  nco-main.docbook  nco-photossounds.ttl  nco.trig.in
src/ndo/: ndo-authors.docbook  ndo-file-download.graphml  ndo-main.docbook  ndo.trig.in
src/nexif/: .nexif.trig.in.kate-swp  nexif-authors.docbook  nexif-main.docbook  nexif.trig.in
src/nfo/: nfo-authors.docbook  nfo-main.docbook  nfo.trig.in
src/nid3/: nid3.trig.in
src/nie/: nie-authors.docbook  nie-main.docbook  nie.trig.in
src/nmm/: nmm-authors.docbook  nmm-main.docbook  nmm.trig.in
src/nmo/: nmo-authors.docbook  nmo-main.docbook  nmo.trig.in
src/nrl/: nrl-authors.docbook  nrl-main.docbook  nrl.trig.in
src/nso/: nso-authors.docbook  nso-main.docbook  nso.trig.in
src/nuao/: nuao-authors.docbook  nuao-main.docbook  nuao.trig.in
src/pimo/: pimo-authors.docbook  pimo-main.docbook  pimo.trig.in
src/tmo/: tmo-authors.docbook  tmo-main.docbook  tmo.trig.in
